# auto-pass

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LESSONSLEARNED.md  README.md  REFS-PUBLIC.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  python-publish.yml
config/: auto-pass.env.example  downstream-repos.toml  keepass-dbs.example.json  provisioning-allowlist.example.toml
config/tachometer/: profile.toml
docs/: contributor-architecture-blueprint.md
docs/diagrams/: python-classes.puml  python-packages.puml  repo-architecture.drawio  repo-architecture.puml  shell-call-graph.puml  tooling-integrations.puml
src/auto_pass/: __init__.py  allowlist.py  cli.py  client.py  dbindex.py  envfile.py  keepassxc.py  notifications.py  rotation.py  server.py
src/auto_pass.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/auto_pass/web/: app.py  audit.py  auth.py
src/auto_pass/web/templates/: allowlist.html  audit.html  base.html  daemon.html  entries.html  login.html
tests/: test_allowlist.py  test_cli.py  test_client.py  test_dbindex.py  test_dyno_integration.py  test_envfile.py  test_keepassxc.py  test_notifications.py  test_rotation.py  test_server.py
